<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/linear_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/judul_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/judul_profile"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="5dp"
            android:src="@drawable/deni_low"/>

        <TextView
            android:id="@+id/nama_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_profile"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/npm_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/npm_profile"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/jurusan_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jurusan_profile"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/linear_profile_ib"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ib_profile_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/facebook_logo_70" />

            <ImageButton
                android:id="@+id/ib_profile_yt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/yt_logo_70" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>